package com.example.chronicwound;

public class PreferencesUtility {
    // Values for Shared Prefrences
    public static final String LOGGED_IN_PREF = "logged_in_status";
}
